Commit 22 : Big changes. Menu tested on separate HTML page to avoid confusion and for more clarity in the code. Menu item card,style,image,spacings Add.

--- a/css/style.css
+++ b/css/style.css
@@ -47,7 +47,7 @@ body.news .heading_container {
 .glassframe {
     width: auto;
     height: auto;
-    background: rgba(255, 255, 255, 0.404);
+    background: rgba(255, 255, 255, 0.566);
     backdrop-filter: blur(7px);
     color: rgb(57, 57, 57);
     display: flex;
@@ -241,3 +241,89 @@ body.news .heading_container {
   .main_container {
     width: 60rem;
   }
+
+  /*Menu Styling */
+  .pricing_items {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.item_container {
+    max-width: 800px;
+    
+}
+.pricing_card_left ,  .pricing_card_right {
+    background:linear-gradient(90deg , rgba(0, 0, 0, 0.052) , rgb(255, 250, 205) , rgba(0, 0, 0, 0.52));
+    
+    backdrop-filter: blur(7px);
+    box-shadow: 0px 0px 16px 0px rgba(0, 0, 0, 0.645);
+    border-radius: 30px;
+    display: flex;
+    align-items: center;
+    padding: 24px;
+    margin-bottom: 30px;
+}
+.pricing_card_right {
+    flex-direction: row;
+}
+.pricing_card_left {
+    flex-direction: row-reverse;
+}
+.pricing_image {
+    max-width: 20%;
+    margin-right: 40px;
+    box-shadow: 0px 0px 16px 0px rgba(0, 0, 0, 0.645);
+    margin-right: 20px;
+}
+.pricing_content {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.pricing_content p {
+    margin: 0;
+}
+.pricing_divider {
+    height: 1px;
+    background-color: #e4ebf3;
+    margin: 9px -16px 16px;
+}
+.pricing_details {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+}
+.pricing_block {
+    margin-bottom: -10px;
+}
+@media screen and (max-width: 767px) {
+    .pricing_items {
+        padding: 30px 15px;
+    }
+    .pricing_card_left , .pricing_card_right {
+        flex-direction: column;
+        align-items: center;
+    }
+    .pricing_image {
+        max-width: 70%;
+        margin-bottom: 30px;
+        margin-right: 0;
+    }
+}
+
+@media screen and (max-width: 479px) {
+    .item_container {
+        max-width: none;
+    }
+    .pricing_card_left , .pricing_card_right {
+        padding: 15px;
+    }
+    .pricing_details {
+        flex-direction: column;
+        margin-bottom: -10px;
+    }
+    .pricing_block {
+        margin-bottom: 10px;
+    }
+}
